--- a/Clone-Netflix/index.html
+++ b/Clone-Netflix/index.html
@@ -219,7 +219,8 @@
         "Escrever a nossa historia de amor.",
         "Morar no teu abraço, desfrutar sempre dos seus beijos e carinho.",
         "Pois você é a mulher que eu amo e mais desejo nessa vida.",
-        "Fica comigo pra patodavida❤️"
+        "Fica comigo pra patodavida❤️",
+        "Eu te amo Eliane ❤️"
     ];
 
     let index = 0;
