--- a/Clone-Netflix/index.html
+++ b/Clone-Netflix/index.html
@@ -220,7 +220,7 @@
         "Morar no teu abraço, desfrutar sempre dos seus beijos e carinho.",
         "Pois você é a mulher que eu amo e mais desejo nessa vida.",
         "Fica comigo pra patodavida❤️",
-        "Eu te amo Eliane ❤️"
+        "EU TE AMO ❤️"
     ];
 
     let index = 0;
