--- a/Carta/index.html
+++ b/Carta/index.html
@@ -41,7 +41,7 @@
                     Teu ser, mistério e luz, me envolve e entoa,<br>
                     Um canto etéreo que faz meu coração infalivelmente seguir.<br>
                     <br>
-                    Teus cachos dourados, dançando ao vento,<br>
+                    Teu cabelo castanha, dançando ao vento,<br>
                     São fios de melancolia e raios crepusculares a brilhar.<br>
                     Tua fragrância doce, em cada momento,<br>
                     É o elixir que me dá vida, alento sem parar.<br>
@@ -51,7 +51,7 @@
                     Contigo, Eliane, cada dia é uma rima, uma graça,<br>
                     E a noite, um refúgio, onde sob teu cafuné, desejo eternamente repousar.<br>
                     <br>
-                    Cacheados que em ondas evocam campos dourados,<br>
+                    cabelo castanha que em ondas evocam campos dourados,<br>
                     E tua feminilidade, como estrelas, que nunca se extinguirão.<br>
                     Em teu amor, tão profundo e ilimitado,<br>
                     Prometo, Eliane, por todos os céus e mares, te amparar e te amar.<br>
