--- a/Declaracao/index.html
+++ b/Declaracao/index.html
@@ -19,7 +19,7 @@
 
             <p>Você me traz estabilidade e tranquilidade para eu ir em busca dos meus sonhos e me faz sentir plenamente 
 				realizado.❤️ Espero, sinceramente, que eu seja para você também um bom companheiro e que você se sinta tão 
-				feliz e pleno como eu.😊</p>
+				feliz e plena como eu.😊</p>
 
             <p>Eu te amo, minha princesa, minha totosa!❤️ Parabéns a nós dois pelos nossos dois anos de namoro!❤️</p>
 
